--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <form>
+        First Name:
+        <input type="text" name="First Nmae:">
+		 <br>
+        Last Name:
+        <input type="text" name="First Nmae:">
+		 <br>
+         Phone Number:
+        <input type="text" name="First Nmae:">
+        <br> 
+        Email id:
+        <input type="text" name="email_id">
+        <br>
+        <input type="submit" value="Submit">
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
