--- a/main.html
+++ b/main.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form Example</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	 <form>
-        First Name:
-        <input type="text" name="First Nmae:">
-		 <br>
-        Last Name:
-        <input type="text" name="First Nmae:">
-		 <br>
-         Phone Number:
-        <input type="text" name="First Nmae:">
-        <br> 
-        Email id:
-        <input type="text" name="email_id">
-        <br>
+    <form id="myForm">
+        <label for="firstName">First Name:</label>
+        <input type="text" id="firstName" name="firstName" required><br>
+
+        <label for="lastName">Last Name:</label>
+        <input type="text" id="lastName" name="lastName" required><br>
+
+        <label for="phoneNumber">Phone Number:</label>
+        <input type="tel" id="phoneNumber" name="phoneNumber" required><br>
+
+        <label for="email">Email ID:</label>
+        <input type="email" id="email" name="email" required><br>
+
         <input type="submit" value="Submit">
     </form>
-    <script type="text/javascript" src="./script.js">
-</script>
 
+    <script>
+        document.getElementById("myForm").addEventListener("submit", function(event) {
+            event.preventDefault(); // Prevent form submission
+            const formData = new FormData(event.target);
+            const firstName = formData.get("firstName");
+            const lastName = formData.get("lastName");
+            const phoneNumber = formData.get("phoneNumber");
+            const email = formData.get("email");
+
+            const alertMessage = `First Name: ${firstName}\nLast Name: ${lastName}\nPhone Number: ${phoneNumber}\nEmail ID: ${email}`;
+            alert(alertMessage);
+        });
+    </script>
 </body>
-
 </html>
