--- a/main.html
+++ b/main.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,7 +25,7 @@
 
     <script>
         document.getElementById("myForm").addEventListener("submit", function(event) {
-            event.preventDefault(); // Prevent form submission
+            event.preventDefault();
             const formData = new FormData(event.target);
             const firstName = formData.get("firstName");
             const lastName = formData.get("lastName");
