--- a/main.html
+++ b/main.html
@@ -1,40 +1,60 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Example</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Form</title>
+<style>
+    label {
+        display: block;
+        margin-bottom: 10px;
+    }
+    input {
+        width: 100%;
+        padding: 5px;
+        margin-bottom: 10px;
+    }
+    button {
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+    }
+</style>
 </head>
 <body>
-    <form id="myForm">
-        <label for="firstName">First Name:</label>
-        <input type="text" id="firstName" name="firstName" required><br>
 
-        <label for="lastName">Last Name:</label>
-        <input type="text" id="lastName" name="lastName" required><br>
+<form id="myForm">
+    <label for="firstName">First Name</label>
+    <input type="text" id="firstName" name="First Name" required>
 
-        <label for="phoneNumber">Phone Number:</label>
-        <input type="tel" id="phoneNumber" name="phoneNumber" required><br>
+    <label for="lastName">Last Name</label>
+    <input type="text" id="lastName" name="Last Name" required>
 
-        <label for="email">Email ID:</label>
-        <input type="email" id="email" name="email" required><br>
+    <label for="phoneNumber">Phone Number</label>
+    <input type="tel" id="phoneNumber" name="Phone Number" required>
 
-        <input type="submit" value="Submit">
-    </form>
+    <label for="email">Email ID</label>
+    <input type="email" id="email" name="Email ID" required>
 
-    <script>
-        document.getElementById("myForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-            const formData = new FormData(event.target);
-            const firstName = formData.get("firstName");
-            const lastName = formData.get("lastName");
-            const phoneNumber = formData.get("phoneNumber");
-            const email = formData.get("email");
+    <button type="submit">Submit</button>
+</form>
 
-            const alertMessage = `First Name: ${firstName}\nLast Name: ${lastName}\nPhone Number: ${phoneNumber}\nEmail ID: ${email}`;
-            alert(alertMessage);
-        });
-    </script>
+<script>
+document.getElementById("myForm").addEventListener("submit", function(event) {
+    event.preventDefault();
+    
+    var formData = new FormData(this);
+    var formInfo = "";
+
+    formData.forEach(function(value, key){
+        formInfo += key + ": " + value + " ";
+    });
+
+    alert(formInfo);
+});
+</script>
+
 </body>
 </html>
